# analytics

./: .gitignore  Makefile  README.md  celery_app.py  cube.py  dataset.ipynb  docker-compose.yml  iceberg.py  load.py  main.py  pyproject.toml  seeder.py  session.py  test.py
apps/api/: models.py
apps/api/migrations/: 0001_initial.py  0002_alter_order_order_estimated_delivery_date.py
data_store/: pyproject.toml
data_store/data_store/: __init__.py  cube.py  order_item.py
server/: settings.py
tasks/: pyproject.toml
tasks/tasks/: __init__.py  order_items.py
