[tool.poetry]
name = "analytics"
version = "0.1.0"
description = ""
authors = ["romashorodok <108732029+romashorodok@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyiceberg = {extras = ["sql-postgres"], version = "^0.7.1"}
duckdb = "^1.1.2"
pyarrow = "^18.0.0"
sqlalchemy = "^2.0.36"
celery = "^5.4.0"
redis = "^5.2.0"
tasks = { path = "./tasks", develop = true }
data_store = { path = "./data_store", develop = true }
pandas = "^2.2.3"
django = "^5.1.2"
djangorestframework = "^3.15.2"
asyncpg = "^0.30.0"
greenlet = "^3.1.1"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
setuptools = "^75.3.0"
wheel = "^0.44.0"
django-stubs = "^5.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
