[tool.poetry]
name = "data-store"
version = "0.1.0"
description = ""
authors = ["romashorodok <108732029+romashorodok@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyiceberg = {extras = ["s3fs", "sql-postgres"], version = "^0.7.1"}
sqlalchemy = "^2.0.36"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
