[tool.poetry]
name = "tasks"
version = "0.1.0"
description = ""
authors = ["romashorodok <108732029+romashorodok@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
celery = "^5.4.0"
data_store = { path = "../data_store", develop = true }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
